--- a/TeLoBusco/Servicios/Servicios.csproj
+++ b/TeLoBusco/Servicios/Servicios.csproj
@@ -49,6 +49,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AccesoDatos\EstadosPedidoServicio.cs" />
+    <Compile Include="AccesoDatos\LocalidadesServicio.cs" />
+    <Compile Include="AccesoDatos\PedidosServicio.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="AccesoDatos\AspNetRolesServicio.cs" />
     <Compile Include="AccesoDatos\AspNetUsersServicio.cs" />
