--- a/TeLoBusco/TeLoBusco/Web.config
+++ b/TeLoBusco/TeLoBusco/Web.config
@@ -9,9 +9,14 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=DESKTOP-HF0F6NK;initial catalog=TeloBusco;integrated security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+    <!-- LOCAL - IDENTITY -->
+    <!-- <add name="DefaultConnection" connectionString="Data Source=DESKTOP-HF0F6NK;initial catalog=TeloBusco;integrated security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" /> -->
+    
+    <!--APP HARBOR - IDENTITY -->
+    <add name="DefaultConnection" connectionString="Data Source=86f34dff-866a-4929-ad02-a962016966f8.sqlserver.sequelizer.com ;initial catalog= db86f34dff866a4929ad02a962016966f8; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+    
+    <!--ENTITY FRAMEWORK-->
     <add name="TeloBuscoEntities" connectionString="metadata=res://*/Model.csdl|res://*/Model.ssdl|res://*/Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-HF0F6NK;initial catalog=TeloBusco;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <!--<add name="TeloBuscoEntities" connectionString="metadata=res://*/Model.csdl|res://*/Model.ssdl|res://*/Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-HF0F6NK;initial catalog=T;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
