--- a/TeLoBusco/TeLoBusco/packages.config
+++ b/TeLoBusco/TeLoBusco/packages.config
@@ -48,9 +48,11 @@
   <package id="Microsoft.Owin.Security.Twitter.es" version="3.0.1" targetFramework="net451" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net451" />
   <package id="Modernizr" version="2.6.2" targetFramework="net451" />
-  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net451" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net451" />
   <package id="popper.js" version="1.14.0" targetFramework="net451" />
   <package id="Respond" version="1.2.0" targetFramework="net451" />
+  <package id="Sendgrid" version="9.10.0" targetFramework="net452" />
+  <package id="System.Net.Http" version="4.3.3" targetFramework="net452" />
   <package id="WebGrease" version="1.5.2" targetFramework="net451" />
 </packages>
