--- a/TeLoBusco/Servicios/Servicios.csproj
+++ b/TeLoBusco/Servicios/Servicios.csproj
@@ -50,9 +50,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AccesoDatos\EstadosPedidoServicio.cs" />
+    <Compile Include="AccesoDatos\EstadosServicio.cs" />
     <Compile Include="AccesoDatos\LocalidadesServicio.cs" />
     <Compile Include="AccesoDatos\PedidosServicio.cs" />
+    <Compile Include="AccesoDatos\TiposActividadesServicio.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="AccesoDatos\AspNetRolesServicio.cs" />
     <Compile Include="AccesoDatos\AspNetUsersServicio.cs" />
