--- a/TeLoBusco/Utilidades/packages.config
+++ b/TeLoBusco/Utilidades/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
+  <package id="Google.Maps.Geocoding.NET-API" version="1.0.0" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net452" />
   <package id="Sendgrid" version="9.10.0" targetFramework="net452" />
   <package id="System.Net.Http" version="4.3.3" targetFramework="net452" />
 </packages>
