--- a/TeLoBusco/RepositorioClases/RepositorioClases.csproj
+++ b/TeLoBusco/RepositorioClases/RepositorioClases.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Pedido.cs" />
+    <Compile Include="Postulacion.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
