--- a/TeLoBusco/Servicios/Servicios.csproj
+++ b/TeLoBusco/Servicios/Servicios.csproj
@@ -53,6 +53,7 @@
     <Compile Include="AccesoDatos\EstadosServicio.cs" />
     <Compile Include="AccesoDatos\LocalidadesServicio.cs" />
     <Compile Include="AccesoDatos\PedidosServicio.cs" />
+    <Compile Include="AccesoDatos\PostulacionesServicio.cs" />
     <Compile Include="AccesoDatos\TiposActividadesServicio.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="AccesoDatos\AspNetRolesServicio.cs" />
