Corrección postulaciones | Ver todos los pedidos
* Se hicieron las validaciones correspondientes para no permitir postularse más de una vez por pedido.
* Es posible visualizar una grilla con todos los pedidos.

--- a/TeLoBusco/TeLoBusco/TeLoBusco.csproj
+++ b/TeLoBusco/TeLoBusco/TeLoBusco.csproj
@@ -352,6 +352,7 @@
     <Content Include="Views\Usuarios\Edit.cshtml" />
     <Content Include="Views\Shared\Info.cshtml" />
     <Content Include="Views\Pedidos\Postularse.cshtml" />
+    <Content Include="Views\Pedidos\PedidosTodos.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
