--- a/TeLoBusco/Datos/Datos.csproj
+++ b/TeLoBusco/Datos/Datos.csproj
@@ -107,6 +107,9 @@
     <Compile Include="TiposActividades.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
+    <Compile Include="Valoraciones.cs">
+      <DependentUpon>Model.tt</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <EntityDeploy Include="Model.edmx">
