--- a/TeLoBusco/RepositorioClases/RepositorioClases.csproj
+++ b/TeLoBusco/RepositorioClases/RepositorioClases.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Pedido.cs" />
     <Compile Include="Postulacion.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Valoracion.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
