--- a/TeLoBusco/Datos/Datos.csproj
+++ b/TeLoBusco/Datos/Datos.csproj
@@ -70,6 +70,9 @@
     <Compile Include="C__MigrationHistory.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
+    <Compile Include="Denuncias.cs">
+      <DependentUpon>Model.tt</DependentUpon>
+    </Compile>
     <Compile Include="Estados.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
@@ -101,9 +104,6 @@
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="sysdiagrams.cs">
-      <DependentUpon>Model.tt</DependentUpon>
-    </Compile>
     <Compile Include="TiposActividades.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
