--- a/TeLoBusco/RepositorioClases/RepositorioClases.csproj
+++ b/TeLoBusco/RepositorioClases/RepositorioClases.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Denuncia.cs" />
     <Compile Include="Pedido.cs" />
     <Compile Include="Postulacion.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
