Añadir vistas que falan para valoraciones de clientes

--- a/TeLoBusco/TeLoBusco/TeLoBusco.csproj
+++ b/TeLoBusco/TeLoBusco/TeLoBusco.csproj
@@ -364,6 +364,7 @@
     <Content Include="Views\Pedidos\Valorar.cshtml" />
     <Content Include="Views\Denuncias\Denuncia.cshtml" />
     <Content Include="Views\Denuncias\DenunciaEnviada.cshtml" />
+    <Content Include="Views\Valoraciones\ValorarCliente.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
