--- a/TeLoBusco/RepositorioClases/RepositorioClases.csproj
+++ b/TeLoBusco/RepositorioClases/RepositorioClases.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Denuncia.cs" />
     <Compile Include="Pedido.cs" />
     <Compile Include="Postulacion.cs" />
+    <Compile Include="PostulacionApi.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Valoracion.cs" />
   </ItemGroup>
