--- a/TeLoBusco/TeLoBusco/Web.config
+++ b/TeLoBusco/TeLoBusco/Web.config
@@ -21,6 +21,10 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="JWT_SECRET_KEY" value="clave-secreta-api" />
+    <add key="JWT_AUDIENCE_TOKEN" value="http://localhost:12795" />
+    <add key="JWT_ISSUER_TOKEN" value="http://localhost:12795" />
+    <add key="JWT_EXPIRE_MINUTES" value="30" /> 
   </appSettings>
   <!--
     Para obtener una descripción de los cambios de web.config, vea http://go.microsoft.com/fwlink/?LinkId=235367.
@@ -72,7 +76,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" culture="neutral" publicKeyToken="30ad4fe6b2a6aeed" />
-        <bindingRedirect oldVersion="0.0.0.0-9.0.0.0" newVersion="9.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-10.0.0.0" newVersion="10.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Optimization" publicKeyToken="31bf3856ad364e35" />
