--- a/TeLoBusco/TeLoBusco/packages.config
+++ b/TeLoBusco/TeLoBusco/packages.config
@@ -32,6 +32,9 @@
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebPages.es" version="3.2.3" targetFramework="net451" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.0" targetFramework="net451" />
+  <package id="Microsoft.IdentityModel.JsonWebTokens" version="5.3.0" targetFramework="net452" />
+  <package id="Microsoft.IdentityModel.Logging" version="5.3.0" targetFramework="net452" />
+  <package id="Microsoft.IdentityModel.Tokens" version="5.3.0" targetFramework="net452" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.3" targetFramework="net451" />
   <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net451" developmentDependency="true" />
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net451" />
@@ -52,11 +55,12 @@
   <package id="Microsoft.Owin.Security.Twitter.es" version="3.0.1" targetFramework="net451" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net451" />
   <package id="Modernizr" version="2.6.2" targetFramework="net451" />
-  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="10.0.1" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net451" />
   <package id="popper.js" version="1.14.0" targetFramework="net451" />
   <package id="Respond" version="1.2.0" targetFramework="net451" />
   <package id="Sendgrid" version="9.10.0" targetFramework="net452" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="5.3.0" targetFramework="net452" />
   <package id="System.Net.Http" version="4.3.3" targetFramework="net452" />
   <package id="WebGrease" version="1.5.2" targetFramework="net451" />
 </packages>
