--- a/TeLoBusco/TeLoBusco/Web.config
+++ b/TeLoBusco/TeLoBusco/Web.config
@@ -21,9 +21,9 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="JWT_SECRET_KEY" value="clave-secreta-api" />
-    <add key="JWT_AUDIENCE_TOKEN" value="http://localhost:12795" />
-    <add key="JWT_ISSUER_TOKEN" value="http://localhost:12795" />
+    <add key="JWT_SECRET_KEY" value="wappo-secreta-api" />
+    <add key="JWT_AUDIENCE_TOKEN" value="http://localhost:12778" />
+    <add key="JWT_ISSUER_TOKEN" value="http://localhost:12778" />
     <add key="JWT_EXPIRE_MINUTES" value="30" /> 
   </appSettings>
   <!--
