Seguimiento de pedidos (en desarrollo)
* Se puede probar en Pedidos/Mis Pedidos/Seguir pedido

--- a/TeLoBusco/TeLoBusco/TeLoBusco.csproj
+++ b/TeLoBusco/TeLoBusco/TeLoBusco.csproj
@@ -394,6 +394,7 @@
     <Content Include="Views\Denuncias\Denuncia.cshtml" />
     <Content Include="Views\Denuncias\DenunciaEnviada.cshtml" />
     <Content Include="Views\Valoraciones\ValorarCliente.cshtml" />
+    <Content Include="Views\Pedidos\SeguimientoPedido.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
