Posicionamiento de delivery en el mapa de seguimiento

--- a/TeLoBusco/Datos/Datos.csproj
+++ b/TeLoBusco/Datos/Datos.csproj
@@ -100,6 +100,9 @@
     <Compile Include="Pedidos.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
+    <Compile Include="PosicionesDeliverys.cs">
+      <DependentUpon>Model.tt</DependentUpon>
+    </Compile>
     <Compile Include="Postulaciones.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
