--- a/TeLoBusco/Servicios/Servicios.csproj
+++ b/TeLoBusco/Servicios/Servicios.csproj
@@ -55,6 +55,7 @@
     <Compile Include="AccesoDatos\LocalidadesServicio.cs" />
     <Compile Include="AccesoDatos\NotificacionesServicio.cs" />
     <Compile Include="AccesoDatos\PedidosServicio.cs" />
+    <Compile Include="AccesoDatos\PosicionesDeliverysService.cs" />
     <Compile Include="AccesoDatos\PostulacionesServicio.cs" />
     <Compile Include="AccesoDatos\TiposActividadesServicio.cs" />
     <Compile Include="AccesoDatos\ValoracionesServicios.cs" />
