--- a/TeLoBusco/TeLoBusco/TeLoBusco.csproj
+++ b/TeLoBusco/TeLoBusco/TeLoBusco.csproj
@@ -268,6 +268,7 @@
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Images\delivery.png" />
     <Content Include="Images\logo.png" />
     <Content Include="Images\map_image.png" />
     <Content Include="Images\plato-landing.jpg" />
